# voronoi

./: .gitignore  Algorithm.py  Distances.py  Factorization.py  FindDistForDet.py  FindSubGrids.py  GridFloatIterator.py  GridIntIterator.py  LICENSE  LLL.py  Polyhedra.py  README.md  SPoint.py  VoronoiPolyhedra.py  pyproject.toml  results.txt  tests.ipynb  tests.py  voronoi2_100325.ipynb  voronoi2_260225.ipynb  voronoi_info.ipynb  voronoi_main.ipynb  voronoi_new.ipynb  voronoi_new_common_faces_2.ipynb  вороной-итог-2.ipynb  вороной-итог-Copy9.ipynb  вороной-итог2.ipynb  вороной-итог2_190125-Copy2.ipynb  вороной-итог2_041224.ipynb  вороной-итог2_260225.ipynb
docs/: USAGE.md  article.tex
notebooks/: voronoi_info.ipynb  voronoi_main.ipynb
old/: voronoi_new.ipynb  voronoi_new_common_faces.ipynb  вороной-итог2.ipynb  вороной-итог2_231224_35.ipynb
src/voronoi4d/: __init__.py  distances.py  enumeration.py  factorization.py  grids.py  io.py  lll.py  polyhedra.py  search.py
tests/: conftest.py  test_distances.py  test_factorization.py  test_grids.py  test_lll.py  test_polyhedra.py  test_search.py
