[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "voronoi4d"
version = "1.1.0"  # единый источник версии (читается в __init__ через importlib.metadata)
description = "Поиск хроматического числа R^4 через разбиения Вороного 4-мерных решёток"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Леонид Иванов / Leonid Ivanov", email = "leo.ivadev@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy",
    "scipy",
    "sympy",
]

[project.optional-dependencies]
fast = ["fpylll"]       # быстрая C-реализация LLL (иначе — чистый python)
plot = ["matplotlib"]   # построение графиков результатов
progress = ["tqdm"]     # прогресс-бар при переборе целочисленных решёток
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
